<resources>
    <string name="context_menu">Context menu</string>

    <string name="app_name">Q233</string>
    <string name="x"> x </string>
    <string name="y"> y </string>
    <string name="z"> z </string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="norm">norm</string>
    <string name="export">export</string>
    <string name="SD_card">SD</string>
    <string name="read">read</string>
    <string name="text_on">on</string>
    <string name="text_off">off</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="confirm">Confirm:</string>
    <string name="Jump1">Jump1</string>
    <string name="Jump2">Jump2</string>
    <string name="Jump3">Jump3</string>
    <string name="Jump4">Jump4</string>
    <string name="Jump5">Jump5</string>
    <string name="ip">Server IP</string>

    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="linkedin">LinkedIn</string>
    <string name="wordpress">Wordpress</string>
    <string name="myspace">Myspace</string>
    <string name="start_app">Starting application:</string>
    <string name="home">Home</string>
    <string name="acc">Acceleration</string>
    <string name="bdmap">Baidu Map</string>
    <string name="db">Sound</string>
    <string name="count">Counter</string>
    <string name="about_us">About us</string>

</resources>
