<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qy.q233.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/y"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/z"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/norm"
                android:gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/val_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/gray"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/val_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/gray"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/val_z"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/gray"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/val_norm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/gray"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/control"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:layout_weight="1"
                android:onClick="clickButton"/>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
